feat: Resolve PN-111375 "Ctb index update api 5404 and 5405 to use id and to pass status for update2"
