# app/swagger/swagger.json
@@ -2018,7 +2018,7 @@
       },
       "SubmissionErrorRequest": {
         "properties": {
-          "contributionSubmissionId": {
+          "submissionHeaderId": {
             "type": "string"
           },
           "errorCode": {
@@ -2032,7 +2032,7 @@
           }
         },
         "required": [
-          "contributionSubmissionId",
+          "submissionHeaderId",
           "errorCode",
           "payload",
           "payloadType"
